src- Version 4.19/objects/Gateway__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>Configuration object. The administrator should create one Account for the appropriate Payment Gateway.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected purchase confirmation email is sent.
This is only used for Paypal &amp; Authorize.Net</inlineHelpText>
        <label>Email Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exact_ID_Security_Key__c</fullName>
        <description>Required for first data and Authorize.net CIM Payment Gateway</description>
        <inlineHelpText>Required for first data and Authorize.net CIM Payment Gateway</inlineHelpText>
        <label>Exact ID Security Key</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Exact_ID__c</fullName>
        <description>Exact ID - also known as the Gateway ID, This is used for FirstData and Authorize.net CIM</description>
        <inlineHelpText>Exact ID - also known as the Gateway ID, This is used for FirstData and Authorize.net CIM</inlineHelpText>
        <label>Exact ID</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Gateway_Type__c</fullName>
        <label>Gateway Type</label>
        <picklist>
            <picklistValues>
                <fullName>Authorize.net</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WireCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FirstData</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorize.net CIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stripe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SagePay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrainTree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CyberSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CyberSource_CC_Token</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merchant_ID__c</fullName>
        <description>Also know as:
&quot;API Login&quot; on Authorize.net
&quot;Merchant Login&quot; on PayPal(Pay Flow Pro)</description>
        <inlineHelpText>Also know as:
&quot;API Login&quot; on Authorize.net
&quot;Merchant Login&quot; on PayPal(Pay Flow Pro)</inlineHelpText>
        <label>Merchant ID</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Merchant_Reference__c</fullName>
        <description>Not used by Authorize.net
&quot;Partner&quot; in Paypal(Payflow)</description>
        <inlineHelpText>Not used by Authorize.net
&quot;Partner&quot; in Paypal(Payflow)</inlineHelpText>
        <label>Merchant Reference</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Merchant_Seal_User_Id__c</fullName>
        <description>Not used by Paypal and Wirecard
&quot;Merchant Seal&quot; in Authorize.net</description>
        <inlineHelpText>Not used by Paypal and Wirecard
&quot;Merchant Seal&quot; in Authorize.net</inlineHelpText>
        <label>Merchant Seal User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Key__c</fullName>
        <description>Also known as:
&quot;Transaction Key&quot; on Authorize.net
&quot;Password&quot; on PayPal(Payflow Pro)
&quot;Secret Key&quot; on Stripe</description>
        <inlineHelpText>Also known as:
&quot;Transaction Key&quot; on Authorize.net
&quot;Password&quot; on PayPal(Payflow Pro)
&quot;Secret Key&quot; on Stripe</inlineHelpText>
        <label>Merchant Security Key</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Test_Mode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Security_Key__c</fullName>
        <description>Transaction Security Key used by CyberSource</description>
        <inlineHelpText>Transaction Security Key used by CyberSource</inlineHelpText>
        <label>Transaction Security Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Payment Gateway</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Gateway_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Default__c</columns>
        <columns>Test_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Payment Gateways</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Active_payment_methods_can_be_default</fullName>
        <active>true</active>
        <description>Only active payment methods can be default</description>
        <errorConditionFormula>Default__c &amp;&amp; Active__c = false</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Only active payment methods can be default</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exact_ID_And_Exact_ID_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(ISPICKVAL(Gateway_Type__c, &apos;FirstData&apos;), ISPICKVAL(Gateway_Type__c, &apos;Authorize.net CIM&apos;)) ,OR(Exact_ID__c == null, Exact_ID_Security_Key__c == null),false)</errorConditionFormula>
        <errorMessage>Exact ID &amp; Exact ID Security Key is required for FirstData or Authorize.net CIM</errorMessage>
    </validationRules>
</CustomObject>